updated installer